# FDBSchema

./: .gitignore  app.py  database.py  pyproject.toml  scraper.py
static/: app.js  style.css
templates/: index.html
